syntax="proto3";

package framework;

option go_package="./;models";

message Student {
  string name = 1;
  uint32 Id = 3;
  string LastName = 4;
  string FirstName = 5;
  string MiddleName = 6;

  enum GenderType {
    UNKNOWN = 0;
    MALE = 1;
    FEMALE = 2;
  }
  GenderType  Gender = 7;
}